--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,6 @@
 }
 .header-top{
   min-height: 44px;
-  width: 100%;
   background-color: var(--primaryColor);
   font-family: "Josefin Sans";
 
@@ -110,6 +109,14 @@ background-color: white;
   width: 2.1rem;
   height: 2.1rem;
   box-shadow: 0px 0px 2px 2px #151875;
+}
+.slide2{
+  background-color: 318cd1;
+  background-image: linear-gradient(to right top, #d9257d, #b455b5, #7777d2, #318cd1, #1f98bc);
+}
+.slide3{
+  background: linear-gradient(to right, #f8f9fa, #cdcfd1);
+
 }
 .footer{
   color:#9DA0AE;
@@ -225,18 +232,18 @@ opacity: 1;
 .featured:hover .white {
   color: white;;
 }
-.swiper-pagination{
+.featured-swiper-pagination .swiper-pagination{
   top: 90% !important;
 }
-.swiper-pagination-bullet {
+.featured-swiper-pagination .swiper-pagination-bullet {
   width: 16px !important;
   height: 4px !important;
-  background-color: #FEBAD7 !important;
+  background-color: #ee9bbf !important;
   border-radius: 2% !important;
   
 }
 
-.swiper-pagination-bullet-active {
+.featured-swiper-pagination .swiper-pagination-bullet-active {
   background-color: #FB2E86 !important;
   transform: scale(1.3) !important;
   width: 20px !important;
@@ -244,4 +251,31 @@ opacity: 1;
 
 .product-details{
   box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 20px;
+}
+
+.Hero .swiper-pagination{
+  position: absolute !important ;
+  top: 80% !important;
+
+}
+.Hero .swiper-pagination-bullet{
+  rotate: 45deg;
+  border-radius: 0 !important;
+  background: none;
+  width: 9px;
+  height: 9px;
+  border: 1.5px solid #fb2e86;
+  margin-right: 10px !important;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+}
+.Hero  .swiper-pagination-bullet-active{
+  background: #fb2e86;
+}
+
+.news{
+  background-image: url("/lastpic.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
